[package]
name = "stakerspace-pool-wasm-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.28"
subxt = { version = "0.32.1", default-features = false, features = ["jsonrpsee", "web", "unstable-light-client"], target_arch = "wasm32" }
yew = { version = "0.21.0", features = ["csr"] }
web-sys = "0.3.64"
hex = "0.4.3"
yew-router = "0.18.0"
js-sys = "0.3.64"
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
anyhow = "1.0.75"
serde = "1.0.188"
serde_json = "1.0.107"